--- a/blog/2019-05-28-hola.md
+++ b/blog/2019-05-28-hola.md
@@ -1,11 +1,73 @@
 ---
-slug: hola
-title: Hola
-author: Gao Wei
-author_title: Docusaurus Core Team
-author_url: https://github.com/wgao19
+slug: welcome-to-the-metaverse-wrassling-federation
+title: Welcome to the Metaverse Wrassling Federation
+description: Announcing the MWF — an open, on-chain wrestling game for NFT avatars
+author: '@sammybauch'
 author_image_url: https://avatars1.githubusercontent.com/u/2055384?v=4
-tags: [hola, docusaurus]
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum dignissim ultricies. Fusce rhoncus ipsum tempor eros aliquam consequat. Lorem ipsum dolor sit amet
+### Announcing the MWF — an open, on-chain wrestling game for NFT avatars
+
+The MWF is the flagship project from [0xEssential](https://twitter.com/0xessential). We build developer tools for creating portable, interoperable and composable NFTs with metaverse utility. We believe portability is a core tenet of digital property rights, and fear that without open standards for digital objects we will collectively make the same mistakes we did in Web 2.0, where category winners own the metaverse and rent us digital assets from their walled gardens.
+
+Today we’re releasing a [demo of our game](https://wrasslers.com), where we’ve created mock NFTs and performed a few hundred matches using our gaming contracts on Polygon’s Mumbai testnet. You can choose a character and opponent, and watch one of our pre-performed matches play out. We’ve asked a bunch of frens to use their NFTs to show the vision for an open gaming platform, where Bored Apes can bash Meebits, VeeFriends aren’t so friendly and 0xMons have a mean clothesline.
+
+For the released version of Wrasslers, NFT developers are invited to create NFTs on Polygon that use our open-source contracts to be compatible with the gaming contracts. We’ll start by approving partners on a project-basis, but seek to completely open the platform as a permissionsless or community-managed protocol for any NFT project to participate. If you’re a collector, tell the project devs and community leads for the projects you’re active in that **you wanna Wrassle!** Existing projects can create new tokens to airdrop to users, while new projects can implement our contracts from launch for future integration.
+
+To help potential partners understand how they’d integrate with the MWF, we’re releasing [developer docs](https://docs.wrasslers.com) and [some RFCs](https://github.com/0xEssential/metaverse-wrassling-federation/issues) to solicit community input on building the Wrassleable standard. We want our standards to be built bottom-up with the web3 community such that they are useful to both NFT creators and metaverse developers looking to build experiences that integrate the digital assets a user owns. We will open a Discord server and announce a first community call in the coming weeks.
+
+<!-- ![](/Users/samuelsbauch/Downloads/medium-export/posts/md_1627658058312/img/1__QzdRBp__XmPLseZc4noB5__g.gif) -->
+
+We’ll also be releasing our own collection of Wrassler NFTs as the founding members of the MWF. We’ll release 15 original, title-card challenging Wrasslers. We’re working with artist, illustrator and animator [James Blagden](https://www.jamesblagden.com/) on the arena and characters. We’re writing lore and backstory and a fictional world leading to the MWF founding. We’re using this source material and GPT-3 to scale the process of creating thousands more Wrasslers to round out the collection.
+
+To help us keep funding the project, we’ll be auctioning a 1 of 1 edition NFT of Jame’s original arena artwork GIF. The buyer of this collectible will be given the opportunity to work with our creative team to create a custom Wrassler. We’ve deployed a custom smart contract for James to sell his art, and this is his genesis piece. We also [open-sourced the smart contract and artist minting app](https://github.com/0xEssential/smartist-contract) for other artists to use — it includes on-chain royalties with assets and metadata pinned on IPFS via the included minting app.
+
+### It all starts from a seed
+
+I’m [Sammy Bauch](https://twitter.com/sammybauch), the founder of 0xEssential. I only recently devoted every waking minute of my life to web3. I had been building an open-source SAAS startup since March 2020, and decided to start winding it down in February. I started applying for jobs just as NFTs reached a mainstream fever pitch. I started exploring the space when I probably should have been working on applications and cover letters.
+
+It turned out to be a great decision, and the past 5+ months have been an insanely fun whirlwind of learning and growing and exploring and starting a new venture with funding from [Tachyon](https://mesh.xyz/tachyon/). I feel like I’m doing the work I’m meant to do, work that is incredibly important to ensure our decentralized future.
+
+<!-- ![](/Users/samuelsbauch/Downloads/medium-export/posts/md_1627658058312/img/1__2CJLlLs90h4eDFFxINqv7A.png) -->
+
+My first NFT project was [CryptOrchids](https://cryptorchids.io), digital flowers that live and die on the Ethereum blockchain. I’ve written about [the philosophy behind that project](https://cryptorchids.io/almanac/blog/philosophy), and it’s been a small but fun community to be a part of. I took enough profit to survive a few months and had a ton of fun sharing a twisted little infinite game with the NFT community. But at the core CryptOrchids is an exploration of the metaverse that left me wanting.
+
+My biggest disappointment as I began to explore the early metaverse and NFTs was that the only portability and interoperability available was the ability to hang your art NFTs on the walls of your digital spaces. The craziest part is that every NFT is pushed into this same, flat standard — stick an image URL in your NFT’s metadata, and now your token is “art.” But is a CryptoKittie a picture of a cat or _is it itself a cat_? Why are we treating everything as images of objects when we could be expressing the ontological essence of real-world objects on the blockchain? We’re speeding towards a digital first existence, and we’re going to need a lot more _stuff_ to live happily in the metaverse than posters to hang on our walls. Why couldn’t a cat NFT act more like a Tomagotchi and less like a JPG?
+
+<!-- ![](/Users/samuelsbauch/Downloads/medium-export/posts/md_1627658058312/img/1__8f1xvVu2b4WTBMySIUW5rA.png) -->
+
+So I set out to create an NFT that would not be an image of a flower, but would itself be a metaverse flower — living and dying on the blockchain. Houseplants can be understood as art that requires occasional interaction. They are of course much more complex biological specimens, but this felt like a good lens for NFT collectors focused on art. My primary goal after launch was to get CryptOrchids into a metaverse game not as a poster on the wall, but as a 3D, interactive plant that the owner could water right in the game. Despite using some dev tools from metaverse games like Decentraland and CryptoVoxels, it quickly became clear this was not going to become a reality. These platforms were not ready to be open, permissionless metaverse experiences for NFTs beyond art.
+
+As a small creator with less than 100 token owners, these games would understandably not give me the time of day. There was no way my flowers were ending up in these worlds any time soon. With limited time, these platforms must focus on partnering with the category winners, like building a Bored Ape Yacht Club integration so you can use your ape as a metaverse avatar. BattleRacers is an incredibly fun experience, but as a proponent of the open metaverse it gives me pause.
+
+> Here’s the dirty secret web 3 champions aren’t ready to admit — one-off partnerships are creating walled gardens, the same walled gardens we created with Web 2.0.
+
+If another carmaker can’t craft after-market parts to use in Battle Racers, and if I can’t take my Battle Racer and race it in another game, we are failing to build the decentralized future. One-off partnerships and closed platforms create vetically-integrated walled gardens, owned and operated by category winners, and governed more by who you know than your merit. I’d rather live in an open metaverse where any creator can use their skills to craft portable digital items and compete on an open playing field. A metaverse where citizens take their assets to whatever new experience they prefer, rather than sticking around dying ones due to switching costs.
+
+You won’t hear about “NFTs” in 5 years, they will just become digital assets without moniker or modifier. We don’t say “color” TV anymore after all. If we’re speeding towards this digital first existence, we need to do the work of organizing it, defining it and programming it in a way that affords complete property rights. DeFi loves composability — we need it in NFTs. We need to be able to own things like pets or cars or plants and use them in whatever metaverse experience we please. NFTs are items, building blocks of the digital world. To suggest NFTs can fit into neat categories of art, collectibles and utility is a facile understanding of the new experiences this technology allows.
+
+So how can we help the little guys craft portable digital items and participate in the open metaverse more freely? How do we push creators to move beyond 2d representations of things towards expressing the ontological essence of things? I think the answer is **standards**. If we can develop and share standards that make it easy for a metaverse developer to integrate _houseplants_ instead of just CryptOrchids, then the incentive to do that integration worker is much greater. And then NFT creators would want to use these standards to make their items more valuable. Imagine a whole ecosystem of planfts, with CryptoTrunks and Zenft and any plant token anyone in the world can come up with — may a million flowers bloom in the metaverse!
+
+### From flowers to flying elbows
+
+NFTs truly took over my life and I started trying to bring friends into the metaverse. My best bud and quarantine pod-mate [Shawn Annabel](https://www.instagram.com/shawnabellofficial/) was awfully patient with me as I turned every one of our conversations back to NFTs. He’s responsible for the idea for Wrasslers, having loved a play-by-mail wrestling game he played as a kid. We watched other NFT projects drop, started thinking about doing a collection of wrestling characters.
+
+We started seeing some latent demand for a Super Smash Bros style fighting game with NFTs, and a handful of NFT projects starting to launch with plans for their own battling arenas. We saw generative 10k avatar projects dropping every day, with some mooning and many others struggling to get attention. We wondered how each of these projects would attain and maintain relevance. We started talking to project developers about their roadmaps, about how they chose what to work on, about how they thought about delivering an increasing ROI to their community.
+
+We think providing **low effort / high impact** projects for NFT roadmaps is the best way to help NFT developers maintain relevance and value. 0xEssential will offer open-source standards for NFTs, like our `Wrassleable` standard, and write great docs and developer tools to help projects quickly ship tokens that are portable, interoperable and composable with metaverse utility. We’ll also start by providing the open utility layers, the open metaverse games that don’t yet exist, to test this approach — any token that implements the `Wrassleable` standard can participate in the Metaverse Wrassling Federation. We hope to show the power of using open standards to create experiences where users can bring their own assets. We think games like Axie Infinity and Zed Run would be better experiences for players — and more profitable for the providers — if players could bring tokens created by other NFT developers.
+
+We certainly don’t have all of the answers, and are planning to build in the open with support from the web3 community. We’ve opened up some RFCs around the `Wrassleable` standard, and hope you will help us craft this and future standards as bottom-up, community driven tools for all.
+
+### We deserve an open metaverse
+
+What keeps me up at night these days is the fear that Epic or Facebook is going to own the metaverse. I feel like I’m screaming into the void about this failure case, and most web3 supporters seem to assume that decentralization is just going to win.
+
+Web 2.0 companies like Facebook have extraction in their DNA. It’s a big, slow ship to turn. Do we really expect Epic to forego the billions in dollars of revenue they earn in renting you digital assets like skins? Even if Epic allows you to sell skins to other users an an open blockchain, and provides a platform for creators to sell, I’m still skeptical of the pure portability and fairness of this potential system.
+
+Many important things start as toys and this is no different in web3. The Metaverse Wrassling Federation, and the `Wrassleable` standard is a fun little arcade game to give you something entertaining to do with your NFT avatars.
+
+But we’re using this as a trojan horse to start getting standards-based NFTs into wallets, to start building a community of developers and decentralization enthusiasts to collectively bring portability to NFTs. We’re in a race to build an army of builders and digital asset owners who will refuse to participate in any experience that does not allow them to bring their favorite digital items into that experience.
+
+This is incredibly important work to ensure we do not make the same mistakes in web3 as we did in Web 2.0. We hope you’ll support us, contribute to this work, join our community, and use the standards we develop to create incredible NFTs and amazing metaverse experiences that utilize them.
+
+We’d love for you to [play our demo](https://wrasslers.com) and let us know your thoughts and ideas! If you own some NFTs you’d like to see in the MWF, the best thing to do is tell the developers and community leaders of those projects about Wrasslers and encourage them to get in touch with us to integrate their project. If you’re an NFT creator yourself, we’d love to chat with you about joining the MWF. Please follow [@wraslersgg](https://twitter.com/wrasslersgg) to stay up to date on our announcements. Over the following weeks we will open our Discord community and schedule a first community call to meet those of you who want to help ensure an open metaverse where portability is a key aspect of digital property rights.
