--- a/blog/2021-07-28-hola.md
+++ b/blog/2021-07-28-hola.md
@@ -3,7 +3,7 @@ slug: welcome-to-the-metaverse-wrassling-federation
 title: Welcome to the Metaverse Wrassling Federation
 description: Announcing the MWF — an open, on-chain wrestling game for NFT avatars
 author: '@sammybauch'
-author_image_url: https://avatars1.githubusercontent.com/u/2055384?v=4
+author_image_url: https://pbs.twimg.com/profile_images/821064116643176448/ROaqvX-h_400x400.jpg
 ---
 
 ### Announcing the MWF — an open, on-chain wrestling game for NFT avatars
