add truncation to blog

--- a/blog/2021-07-28-hola.md
+++ b/blog/2021-07-28-hola.md
@@ -10,6 +10,8 @@ author_image_url: https://pbs.twimg.com/profile_images/821064116643176448/ROaqvX
 
 The MWF is the flagship project from [0xEssential](https://twitter.com/0xessential). We build developer tools for creating portable, interoperable and composable NFTs with metaverse utility. We believe portability is a core tenet of digital property rights, and fear that without open standards for digital objects we will collectively make the same mistakes we did in Web 2.0, where category winners own the metaverse and rent us digital assets from their walled gardens.
 
+<!--truncate-->
+
 Today we’re releasing a [demo of our game](https://wrasslers.com), where we’ve created mock NFTs and performed a few hundred matches using our gaming contracts on Polygon’s Mumbai testnet. You can choose a character and opponent, and watch one of our pre-performed matches play out. We’ve asked a bunch of frens to use their NFTs to show the vision for an open gaming platform, where Bored Apes can bash Meebits, VeeFriends aren’t so friendly and 0xMons have a mean clothesline.
 
 For the released version of Wrasslers, NFT developers are invited to create NFTs on Polygon that use our open-source contracts to be compatible with the gaming contracts. We’ll start by approving partners on a project-basis, but seek to completely open the platform as a permissionsless or community-managed protocol for any NFT project to participate. If you’re a collector, tell the project devs and community leads for the projects you’re active in that **you wanna Wrassle!** Existing projects can create new tokens to airdrop to users, while new projects can implement our contracts from launch for future integration.
