--- a/blog/2021-08-08-how-to-reveal.mdx
+++ b/blog/2021-08-08-how-to-reveal.mdx
@@ -12,6 +12,8 @@ For builders new to the NFT space there are some aspects to creating an NFT coll
 
 This guide is intended to help developers new to web3 understand this particular aspect of NFTs, but I hope it will be useful to less technical readers as well. I also want to point out that this is one strategy for a narrow type of NFT project with metadata. NFT innovators like Avastars, Luchadores, Forgotten Runes Wizards Cult, solSeeders and others use more advanced techniques where art is generated and stored on-chain without the need for IPFS. Some community members distrust the permanence of IPFS, but storing your metadata on IPFS is indubitably more decentralized than storing it on your own API server.
 
+<!--truncate-->
+
 TLDR: we've got a [sample repo on Github that you can clone](https://github.com/0xessential/metador)!
 
 ## tokenUri and metadata
